se creo un repositorio para almacenar los datos de la api y no depender constantemente de esta